--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: corne_left
+    shield: corne-choc_left
   - board: seeeduino_xiao_ble
-    shield: corne_right
+    shield: corne-choc_right
