--- a/config/boards/shields/corne-choc/corne-choc.conf
+++ b/config/boards/shields/corne-choc/corne-choc.conf
@@ -3,4 +3,7 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_DISPLAY=y
+
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=y
