feat: enable deep sleep

--- a/config/chippy.conf
+++ b/config/chippy.conf
@@ -8,3 +8,7 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Turn on sleep, and set to 25 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1500000
